--- a/Sources/RustShims/.cargo/config.toml
+++ b/Sources/RustShims/.cargo/config.toml
@@ -12,8 +12,9 @@ linker = "/mnt/ext/etc/android_sdk/ndk/25.1.8937393/toolchains/llvm/prebuilt/lin
 #linker = "/mnt/ext/etc/android_sdk/ndk/25.1.8937393/toolchains/llvm/prebuilt/linux-x86_64/bin/x86_64-linux-android22-clang"
 linker = "/mnt/ext/etc/android_sdk/ndk/25.2.9519653/toolchains/llvm/prebuilt/linux-x86_64/bin/x86_64-linux-android32-clang"
 
-[target.x86_64-unknown-linux-gnu]
-linker = "/usr/bin/cc"
+#[target.x86_64-unknown-linux-gnu]
+#linker = "clang"
+#rustflags = ["-C", "link-arg=-fuse-ld=mold"]
 
 [target.riscv64gc-unknown-linux-gnu]
 linker = "riscv64-linux-gnu-gcc"
@@ -24,7 +25,7 @@ linker = "aarch64-linux-gnu-gcc"
 
 
 [build]
-target = "x86_64-unknown-linux-gnu"
+target = ["x86_64-unknown-linux-gnu"]
 #target = ["x86_64-unknown-linux-gnu", "aarch64-unknown-linux-gnu", "aarch64-linux-android", "i686-linux-android", "x86_64-linux-android", "riscv64gc-unknown-linux-gnu"]
 
 #target-dir = "./output"
